# medmnistc-api

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
assets/examples/: augment.ipynb  create_dataset.ipynb  evaluation.ipynb  visualize.ipynb
medmnistc/: augmentation.py  dataset.py  dataset_manager.py  eval.py  visualizer.py
medmnistc/assets/: inks.npz
medmnistc/corruptions/: base.py  compression.py  enhance.py  filter.py  microscopy.py  noise.py  registry.py
medmnistc/utils/: baselines.py  utils.py
